Add the Groovy debug adapter: server/ plus the VSCode wiring
The T0 spike proved that in attach mode the JVM can answer "does this class own
this source line" on its own, so binding a breakpoint in a .groovy file needs no
Groovy parsing at all. This turns that into a working debug adapter.

server/ is Java 17 with no third-party dependencies -- the DAP wire format is
JSON over stdio, and a few hundred lines of parser cost less than shading a JSON
library into a jar that ships inside a vsix. The jar comes out at 44 KB.

  Main.java             stdio entry point. Moves System.out to stderr, because
                        stdout is the protocol channel and one stray println
                        lands between two messages and desyncs the client
  DebugSession.java     DAP dispatch on one thread, the JDI event queue on
                        another
  dap/Json.java         JSON reader/writer
  dap/DapTransport.java Content-Length framing, read as bytes, writes locked
  jdi/SourceRef.java    file -> class-name prefixes, and whether a line can hold
                        code at all
  jdi/BreakpointBinder  the binding algorithm
  jdi/StopDeduper.java  drops the second stop one line produces in one call
  jdi/Variables.java    unwraps groovy.lang.Reference, hides synthetic locals,
                        reads boxed primitives as values
  jdi/SourceLocator     stack frame -> source file

Three things the target VM forces:

  - Every location of a line is armed, never just the first. Groovy compiles each
    statement twice, a callsite path and a primitive path under the same line
    number, and only one runs; arming the lowest bci can arm the dead one.

  - The duplicate stops that causes are dropped at the stop, keyed on thread,
    method, line and depth with a differing bci. The record survives the
    suppression on purpose: the next call re-enters at the same bci, which is
    what separates a fresh call from the tail of this one.

  - One EventSet can carry sev